--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <div class="container">
             <h1 class="section-title light-bg-title">Education and Background</h1>
             <p class="text text-spacing light-bg-text">My journey began at the Borough of Manhattan Community College, where I studied health information technology. As I learned the inner workings of our healthcare system and handled patient records myself, I felt a strong sense of urgency. My education was no longer a means to an end, but a foundation to engage with health equity on a deeper level. This desire to drive positive change led me to the New York City College of Technology, where I currently study professional and technical writing.</p>
+            <p class="text text-spacing light-bg-text">If you'd like to read more about my experience, click below to view my resume.</p>
             <div class="button-spacing">
                 <button type="button" class="light-bg-btn" onclick="location.href = 'pdf/Kaila_Santiago_Resume_Academic copy.pdf'">Resume</button>
             </div>
